--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,9 @@ version = "0.1.0"
 [workspace]
 members = [
   # contracts
-  "contracts/test",
+  "contracts/Test",
+  "contracts/Dao",
+  # "contracts/Subnet",
+  # "contracts/Cloud",
+  # "contracts/Bridge",
 ]
