--- a/contracts/Dao/Cargo.toml
+++ b/contracts/Dao/Cargo.toml
@@ -5,11 +5,11 @@ authors = ["[your_name] <[your_email]>"]
 edition = "2021"
 
 [dependencies]
-ink = { git = "https://github.com/use-ink/ink", branch = "master", default-features = false, features = ["unstable-hostfn"] }
+ink = { workspace = true, default-features = false, features = ["unstable-hostfn"] }
 primitives = {path = "../../primitives", package = "primitives", default-features = false}
 
 [dev-dependencies]
-ink_e2e = { git = "https://github.com/use-ink/ink", branch = "master" }
+ink_e2e = { workspace = true }
 
 [lib]
 path = "src/lib.rs"
