--- a/contracts/Dao/Cargo.toml
+++ b/contracts/Dao/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 
 [dependencies]
 ink = { workspace = true, default-features = false, features = ["unstable-hostfn"] }
-primitives = {path = "../../primitives", package = "primitives", default-features = false}
+primitives = { path = "../../primitives", package = "primitives", default-features = false }
 
 [dev-dependencies]
 ink_e2e = { workspace = true }
@@ -18,7 +18,7 @@ path = "src/lib.rs"
 default = ["std"]
 std = [
     "ink/std",
-    "primitives/std"
+    "primitives/std",
 ]
 ink-as-dependency = []
 e2e-tests = []
