--- a/contracts/Test/Cargo.toml
+++ b/contracts/Test/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 
 [dependencies]
 ink = { workspace = true, default-features = false, features = ["unstable-hostfn"] }
+primitives = { path = "../../primitives", package = "primitives", default-features = false }
 
 [dev-dependencies]
 ink_e2e = { workspace = true }
@@ -17,6 +18,7 @@ path = "lib.rs"
 default = ["std"]
 std = [
     "ink/std",
+    "primitives/std",
 ]
 ink-as-dependency = []
 e2e-tests = []
