--- a/contracts/Dao/Cargo.toml
+++ b/contracts/Dao/Cargo.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 
 [dependencies]
 ink = {workspace = true, default-features = false, features = ["unstable-hostfn"]}
+scale-info = { workspace = true, default-features = false }
 primitives = {path = "../../primitives", package = "primitives", default-features = false}
 
 [dev-dependencies]
