--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 
 [dependencies]
 ink = { workspace = true, default-features = false, features = ["unstable-hostfn"] }
+scale-info = { workspace = true, default-features = false }
 # ink = { git = "https://github.com/use-ink/ink", branch = "master", default-features = false, features = ["unstable-hostfn"] }
 
 [features]
