--- a/contracts/Subnet/Cargo.toml
+++ b/contracts/Subnet/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "subnet"
 version = "0.1.0"
-authors = ["[your_name] <[your_email]>"]
+authors = ["BaiL"]
 edition = "2021"
 
 [dependencies]
