--- a/contracts/Cloud/Cargo.toml
+++ b/contracts/Cloud/Cargo.toml
@@ -6,12 +6,13 @@ version = "0.1.0"
 
 [dependencies]
 ink = {workspace = true, default-features = false, features = ["unstable-hostfn"]}
-scale = { workspace = true, default-features = false, features = ["derive"] }
-scale-info = { workspace = true, default-features = false }
 primitives = {path = "../../primitives", package = "primitives", default-features = false}
+scale = {workspace = true, default-features = false, features = ["derive"]}
+scale-info = {workspace = true, default-features = false}
 
 # Runing pod 
-pod = { path = "../Pod", default-features = false, features = ["ink-as-dependency"] }
+pod = {path = "../Pod", default-features = false, features = ["ink-as-dependency"]}
+subnet = {path = "../Subnet", default-features = false, features = ["ink-as-dependency"]}
 
 [dev-dependencies]
 ink_e2e = {workspace = true}
@@ -26,5 +27,6 @@ ink-as-dependency = []
 std = [
   "ink/std",
   "primitives/std",
-  "pod/std"
+  "pod/std",
+  "subnet/std",
 ]
