--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ members = [
   "contracts/Subnet",
   "contracts/Cloud",
   "contracts/Pod",
+  "contracts/Test",
   # "contracts/Bridge",
 
   "primitives",
