--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,10 +22,12 @@ members = [
 resolver = "2"
 
 [workspace.dependencies]
-ink = { git = "https://github.com/use-ink/ink",  tag = "v6.0.0-beta", default-features = false }
-ink_e2e = { git = "https://github.com/use-ink/ink",  tag = "v6.0.0-beta" }
-# ink = { version = "v6.0.0-beta", default-features = false  }
-# ink_e2e = { version = "v6.0.0-beta" }
+ink = { git = "https://github.com/use-ink/ink",  tag = "v6.0.0-beta.1", default-features = false }
+ink_precompiles = { git = "https://github.com/use-ink/ink",  tag = "v6.0.0-beta.1", default-features = false }
+ink_e2e = { git = "https://github.com/use-ink/ink",  tag = "v6.0.0-beta.1" }
+ink_sandbox = { git = "https://github.com/use-ink/ink.git", tag = "v6.0.0-beta.1" }
+# ink = { version = "6.0.0-beta.1", default-features = false  }
+# ink_e2e = { version = "6.0.0-beta.1" }
 scale = { package = "parity-scale-codec", version = "3.7.4", default-features = false }
 scale-info = { version = "2.11", default-features = false }
 primitives = { path = "primitives" }
