--- a/inks/Pod/Cargo.toml
+++ b/inks/Pod/Cargo.toml
@@ -6,11 +6,15 @@ version = "0.1.0"
 
 [dependencies]
 ink = {workspace = true, default-features = false, features = ["unstable-hostfn"]}
+ink_precompiles = { workspace = true, default-features = false }
 scale-info = { workspace = true, default-features = false }
 primitives = {path = "../../primitives", package = "primitives", default-features = false}
 
 [dev-dependencies]
 ink_e2e = {workspace = true}
+ink_sandbox = { workspace = true }
+
+
 
 [lib]
 path = "src/lib.rs"
