--- a/inks/Cloud/Cargo.toml
+++ b/inks/Cloud/Cargo.toml
@@ -16,6 +16,7 @@ subnet = {path = "../Subnet", default-features = false, features = ["ink-as-depe
 
 [dev-dependencies]
 ink_e2e = {workspace = true}
+ink_sandbox = { workspace = true }
 
 [lib]
 path = "src/lib.rs"
