--- a/inks/Cloud/Cargo.toml
+++ b/inks/Cloud/Cargo.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 
 [dependencies]
 ink = {workspace = true, default-features = false, features = ["unstable-hostfn"]}
+ink_precompiles = { workspace = true, default-features = false }
 primitives = {path = "../../primitives", package = "primitives", default-features = false}
 scale = {workspace = true, default-features = false, features = ["derive"]}
 scale-info = {workspace = true, default-features = false}
